package com.cleanup.todoc.ui;

public enum ViewAction {
    SHOW_DIALOG,
    ERROR_TASK_NAME,
    DIALOG_DISMISS
}
